force-app/main/default/objects/Partner__c/fields/CellPhone__c.field-meta.xml
<CustomField>
    <fullName>CellPhone__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>cell phone for partner</description>
    <label>CellPhone</label>
    <type>Phone</type>
</CustomField>