force-app/main/default/objects/Partner__c/fields/Closed_Won_Deals__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Deals__c</fullName>
    <description>Amount of deals that were won with partner</description>
    <label>Closed Won Deals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>