force-app/main/default/objects/Partner__c/fields/DateCreated__c.field-meta.xml
<CustomField>
    <fullName>DateCreated__c</fullName>
    <label>DateCreated</label>
    <type>Date</type>
</CustomField>