force-app/main/default/objects/Partner__c/fields/DealerContact__c.field-meta.xml
<CustomField>
    <fullName>DealerContact__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>DealerContact</label>
    <type>Phone</type>
</CustomField>