force-app/main/default/objects/Partner__c/fields/DealsClosedPercent__c.field-meta.xml
<CustomField>
    <fullName>DealsClosedPercent__c</fullName>
    <label>DealsClosedPercent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>