force-app/main/default/objects/Partner__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Description of Partner Industry</description>
    <label>Industry</label>
    <type>TextArea</type>
</CustomField>