force-app/main/default/objects/Partner__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Name of Partner</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>