force-app/main/default/objects/Partner__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Relevant notes about partner</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>