force-app/main/default/objects/Partner__c/fields/NumCustomers__c.field-meta.xml
<CustomField>
    <fullName>NumCustomers__c</fullName>
    <label>NumCustomers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>