force-app/main/default/objects/Partner__c/fields/NumEployees__c.field-meta.xml
<CustomField>
    <fullName>NumEployees__c</fullName>
    <label>NumEployees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>