force-app/main/default/objects/Partner__c/fields/ParterPhone__c.field-meta.xml
<CustomField>
    <fullName>ParterPhone__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Best phone number for Partner</description>
    <label>ParterPhone</label>
    <type>Phone</type>
</CustomField>