force-app/main/default/objects/Partner__c/fields/PartnerEmail__c.field-meta.xml
<CustomField>
    <fullName>PartnerEmail__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Best email for partner</description>
    <label>PartnerEmail</label>
    <type>Email</type>
</CustomField>