force-app/main/default/objects/Partner__c/fields/PartnerEmailField__c.field-meta.xml
<CustomField>
    <fullName>PartnerEmailField__c</fullName>
    <label>PartnerEmailField</label>
    <type>Email</type>
</CustomField>