force-app/main/default/objects/Partner__c/fields/PartnerObjective__c.field-meta.xml
<CustomField>
    <fullName>PartnerObjective__c</fullName>
    <label>PartnerObjective</label>
    <type>TextArea</type>
</CustomField>