force-app/main/default/objects/Partner__c/fields/PartnerTargetNumber__c.field-meta.xml
<CustomField>
    <fullName>PartnerTargetNumber__c</fullName>
    <label>PartnerTargetNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>