force-app/main/default/objects/Partner__c/fields/PartnerWebsite__c.field-meta.xml
<CustomField>
    <fullName>PartnerWebsite__c</fullName>
    <label>PartnerWebsite</label>
    <type>Url</type>
</CustomField>