force-app/main/default/objects/Partner__c/fields/PercentClosed__c.field-meta.xml
<CustomField>
    <fullName>PercentClosed__c</fullName>
    <label>PercentClosed</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>