force-app/main/default/objects/Partner__c/fields/Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Use_Cases__c</fullName>
    <label>Use Cases</label>
    <type>TextArea</type>
</CustomField>