force-app/main/default/objects/Partner__c/fields/Validated__c.field-meta.xml
<CustomField>
    <fullName>Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Validated Partner or not</description>
    <label>Validated</label>
    <type>Checkbox</type>
</CustomField>