force-app/main/default/objects/Partner__c/recordTypes/AC.recordType-meta.xml
<RecordType>
    <fullName>AC</fullName>
    <active>true</active>
    <label>AC</label>
</RecordType>